# SpinFEMx

./: .dockerignore  .gitignore  README.md  Readme.md  pyproject.toml
docker/cpu/: Dockerfile
docker/gpu/: Dockerfile
examples/cpu/Bloch_Skyrmion/: Post_Processing.ipynb  Relax.py  data.txt
examples/cpu/Current-Driven_Vortex/: Dynamics.py  Post_Processing.ipynb  Relax.py  cube.h5  cube.xdmf  data.txt
examples/cpu/FMR/: Dynamics.py  PostProcessing.ipynb  Relax.py  table.txt
examples/cpu/Hopfion/: PostProcessing.ipynb  Relax.py  data.txt
examples/cpu/Neel_Skyrmion_on_nanotube/: Post_Processing.ipynb  Relax.py  tube.xdmf
examples/cpu/hysteresis_octahedral_nanoparticles/: Post_Processing.ipynb  Relax.py  chain.h5  chain.xdmf  create_mesh.ipynb  data.txt
examples/gpu/Bloch_Skyrmion/: Post_Processing.ipynb  Relax_GPU.py  disk.h5
examples/gpu/Current_Driven_Bloch_Skyrmion_Nanotube/: Dynamics.py  PostProcessing.ipynb  Relax.py
examples/gpu/Current_driven_skyrmion_Torus/: Dynamics.py  PostProcessing.ipynb  Relax.py
examples/gpu/FMR/: Dynamics.py  PostProcessing.ipynb  Relax.py  disk.xdmf
gpu/: Dockerfile  pyproject.toml
gpu/Examples/: Current-Driven_Vortex.py
gpu/Examples/Current-Driven_Vortex/: Post_Processing.ipynb  Relax_GPU.py
gpu/Examples/Hopfion/: PostProcessing.ipynb  Relax_GPU.py
gpu/src/micromagnetic_gpu/: DMI_Bulk_GPU.py  Demag_FMM_GPU.py  Demag_Lindholm.py  llg_module_GPU.py  llg_stt_module_GPU.py
src/AFMspinfemx/cpu/fields/: Anisotropy_AFM.py  DMI_Bulk_AFM.py  Exchange_AFM.py  InterSublatticeExchange.py  __init__.py
src/fenicsx_AFM/cpu_AFM/fields_AFM/: Anisotropy_AFM.py  DMI_Bulk_AFM.py  DMI_Interfacial_AFM.py  Exchange_AFM.py  InterSublatticeExchange.py
src/fenicsx_micromagnetics/: __init__.py
src/fenicsx_micromagnetics/cpu/: __init__.py
src/fenicsx_micromagnetics/cpu/fields/: Cubic_Anisotropy.py  DMI_Interfacial.py  __init__.py
src/fenicsx_micromagnetics/cpu/solvers/: Zhang_Li.py  (+3 more)
src/fenicsx_micromagnetics/gpu/: __init__.py
src/fenicsx_micromagnetics/utils/: mesh_statistics_cli.py
src/spinfemx/: __init__.py
src/spinfemx/cpu/: __init__.py
src/spinfemx/gpu/: __init__.py
src/spinfemx/utils/: mesh_statistics_cli.py
(+47 files in other folders)
