[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spinfemx"
version = "0.2.0a1"
description = "Micromagnetic simulations with FEniCSx"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "NanoPilot1" }
]

dependencies = [
    "numpy>=1.23",
    "scipy",
    "h5py",
    "numba",
    "meshio",
    "pyvista",
    "bempp-cl"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black"
]

[project.scripts]
spinfemx-mesh-stats = "spinfemx.utils.mesh_statistics_cli:main"
print_statistic = "spinfemx.utils.mesh_statistics_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "spinfemx",
    "spinfemx.cpu",
    "spinfemx.cpu.*",
    "spinfemx.utils",
    "spinfemx.utils.*"
]
exclude = [
    "spinfemx.gpu",
    "spinfemx.gpu.*"
]
