[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micromagnetic-gpu"
version = "0.1.0"
description = "GPU micromagnetic LLG solvers using DOLFINx, PETSc CUDA, CuPy and JAXFMM"
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]
